Applying bestpractice and checkcode recomendations