@@ -3,6 +3,7 @@ package com.ajromero.controller;
 import com.ajromero.domain.dto.ProductDto;
 import com.ajromero.mapper.ProductDtoMapper;
 import com.ajromero.service.IProductService;
+import java.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -11,8 +12,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.List;
-import java.util.stream.Collectors;
+
 
 @RestController
 @RequestMapping("api/v1/products")
@@ -28,7 +28,7 @@ public class ProductController {
         List<ProductDto> result = productService.getProducts()
                                     .stream()
                                     .map(productDtoMapper)
-                                    .collect(Collectors.toList());
+                                    .toList();
         return new ResponseEntity<>(result, HttpStatus.OK);
     }
 }
